Refactor project structure for better modularity and code clarity.

--- a/notebooks/cubesat_imageclassification.ipynb
+++ b/notebooks/cubesat_imageclassification.ipynb
@@ -52,7 +52,6 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "from absl import flags\n",
     "\n",
-    "\n",
     "# Tensorflow and TensorFlow Model Optimization (TF-MOT) Imports\n",
     "import tensorflow as tf\n",
     "from tensorflow_model_optimization.python.core.sparsity.keras.pruning_schedule import PolynomialDecay\n",
@@ -63,9 +62,9 @@
     "from src.model_architecture import *\n",
     "from src.model_training import *\n",
     "from src.model_quantization import *\n",
-    "from evaluate import *\n",
+    "from src.evaluate import *\n",
     "from scripts.data_analysis import *\n",
-    "from train import main  "
+    "from src.train import main  "
    ]
   },
   {
